--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/python:3.4-jessie-browsers
+      - image: circleci/python:3.8-buster-browsers
     steps:
       - attach_workspace:
           at: /tmp/workspace
